tests-snapshots/dbc-cantools/vehicle.snap.stderr
error[E0428]: the name `Unused` is defined multiple times
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36025:5
      |
36024 |     Unused,
      |     ------ previous definition of the type `Unused` here
36025 |     Unused,
      |     ^^^^^^ `Unused` redefined here
      |
      = note: `Unused` must be defined only once in the type namespace of this enum

error[E0428]: the name `Unused` is defined multiple times
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36026:5
      |
36024 |     Unused,
      |     ------ previous definition of the type `Unused` here
36025 |     Unused,
36026 |     Unused,
      |     ^^^^^^ `Unused` redefined here
      |
      = note: `Unused` must be defined only once in the type namespace of this enum

error[E0428]: the name `Unused` is defined multiple times
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36027:5
      |
36024 |     Unused,
      |     ------ previous definition of the type `Unused` here
...
36027 |     Unused,
      |     ^^^^^^ `Unused` redefined here
      |
      = note: `Unused` must be defined only once in the type namespace of this enum

error: unreachable pattern
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36044:13
      |
36043 |             RtSbGpsStatusGpsStatus::Unused => 9,
      |             ------------------------------ matches all the relevant values
36044 |             RtSbGpsStatusGpsStatus::Unused => 8,
      |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
      |
      = note: `-D unreachable-patterns` implied by `-D warnings`
      = help: to override `-D warnings` add `#[allow(unreachable_patterns)]`

error: unreachable pattern
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36045:13
      |
36043 |             RtSbGpsStatusGpsStatus::Unused => 9,
      |             ------------------------------ matches all the relevant values
36044 |             RtSbGpsStatusGpsStatus::Unused => 8,
36045 |             RtSbGpsStatusGpsStatus::Unused => 7,
      |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36046:13
      |
36043 |             RtSbGpsStatusGpsStatus::Unused => 9,
      |             ------------------------------ matches all the relevant values
...
36046 |             RtSbGpsStatusGpsStatus::Unused => 6,
      |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error[E0004]: non-exhaustive patterns: `RtSbGpsStatusGpsStatus::Unused`, `RtSbGpsStatusGpsStatus::Unused` and `RtSbGpsStatusGpsStatus::Unused` not covered
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36039:15
      |
36039 |         match val {
      |               ^^^ patterns `RtSbGpsStatusGpsStatus::Unused`, `RtSbGpsStatusGpsStatus::Unused` and `RtSbGpsStatusGpsStatus::Unused` not covered
      |
note: `RtSbGpsStatusGpsStatus` defined here
     --> tests-snapshots/dbc-cantools/vehicle.snap.rs:36020:10
      |
36020 | pub enum RtSbGpsStatusGpsStatus {
      |          ^^^^^^^^^^^^^^^^^^^^^^
...
36025 |     Unused,
      |     ------ not covered
36026 |     Unused,
      |     ------ not covered
36027 |     Unused,
      |     ------ not covered
      = note: the matched value is of type `RtSbGpsStatusGpsStatus`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
      |
36053 ~             RtSbGpsStatusGpsStatus::_Other(x) => x,
36054 ~             RtSbGpsStatusGpsStatus::Unused | RtSbGpsStatusGpsStatus::Unused | RtSbGpsStatusGpsStatus::Unused => todo!(),
      |
